--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "db:serve": "json-server --watch ./db.json --port-3000",
+    "db:serve": "json-server --watch ./db.json --port-3000 --host 0.0.0.0",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
